Tue Oct  5 13:51:02 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Valuetype_Factories/Cookies.h:
          Make this refcounted

Tue Oct  5 13:44:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ccm/Extension/CCM_ContainerInterceptor.idl:
          Added priority

        * ciao/Containers/Extension/Extension_Container.mpc:
          Added PortableServer as base project.

        * ciao/Containers/Extension/Interceptor_Registration_T.h:
        * ciao/Containers/Extension/Interceptor_Registration_T.cpp:
          Rename action.

        * tests/CIF/Common/CIF_Common.cpp:
        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
          Resolved valgrind errors.

Tue Oct  5 13:13:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * ciao/Deployment/Handlers/Connection_Handler.cpp:
         Fixed typo's

Tue Oct  5 12:22:41 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Connection_Handler.h:
        * ciao/Deployment/Handlers/Connection_Handler.cpp:
          Added disconnect_local_facet

        * tests/Minimum/Sender/Sender.mpc:
          Cleanup

Tue Oct  5 11:27:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * ciao/Deployment/Handlers/Connection_Handler.h:
         Fixed typo's


Tue Oct  5 10:48:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Connection_Handler.h:
        * ciao/Deployment/Handlers/Connection_Handler.cpp:
          Implement disconnect, this now delegates to the separate disconnect
          methods which are still a noop

Tue Oct  5 09:20:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * MPC/config/avoids_ccm_noevent.mpb:
        Add base project to avoids compiling if ccm_noevent is set.

Tue Oct  5 08:57:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * ccm/CCM_Events.idl:
        * ccm/CCM_Object.idl: