@@ -1,3 +1,9 @@
+Wed Oct  6 07:49:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
+        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
+          Don't cache the writer and simplified some code
+
 Tue Oct  5 13:51:02 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Valuetype_Factories/Cookies.h:
